fix: trying to deploy

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -17,7 +17,7 @@
     <div class="header-wrap">
       <div class="header-title">
         <a href="#" class="header-main-title-link">
-          <p class="header-main-title" href="#">Cozy House</p>
+          <p class="header-main-title">Cozy House</p>
           <p class="header-subtitle">Shelter for pets in Boston</p>
         </a>
       </div>
@@ -38,9 +38,9 @@
             <p class='not-only-subtitle p-l'>We offer to give a chance to a little and nice puppy with 
               an extremely wide and open heart. He or she will love you more 
               than anybody else in the world, you will see!</p>
-              <a href="#pets" class="header-link">
+              <form action="#pets" class="header-link">
                 <button class='not-only-button'>Make a friend</button>
-              </a>
+              </form>
           </div>
           <img class='not-only-puppy' src="imgs/start-screen-puppy.png" alt="puppy">
         </div>
@@ -87,9 +87,9 @@
               <img class="pets-slider-right" src="imgs/Arrow-r.svg" alt="">
             </button>
           </div>
-          <a href="our-pets.html" class="pets-main-button-link">
+          <form action="our-pets.html" class="pets-main-button-link">
             <button class="pets-main-button">Get to know the rest</button>
-          </a>
+          </form>
         </div>
       </div>
     </section>
