--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -14,15 +14,15 @@
   <header class="header">
     <div class="header-wrap">
       <div class="header-title">
-        <a href="index.html" class="header-main-title-link">
+        <a href="main.html" class="header-main-title-link">
           <p class="header-main-title">Cozy House</p>
           <p class="header-subtitle">Shelter for pets in Boston</p>
         </a>
       </div>
       <nav class="header-links">
-        <a class="header-link" href="index.html">About the shelter</a>
+        <a class="header-link" href="main.html">About the shelter</a>
         <a class="header-link" id="active-link">Our pets</a>
-        <a class="header-link" href="index.html#help">Help the shelter</a>
+        <a class="header-link" href="main.html#help">Help the shelter</a>
         <a class="header-link" href="#footer">Contacts</a>
       </nav>
     </div>
