feat: ready to deploy

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -90,25 +90,33 @@
       <div class="footer-container">
         <div class="footer-contacts">
           <h3 class="footer-heading">For questions and suggestions</h3>
-          <div class="footer-inner-container">
-            <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
-            <h4 class="footer-info">email@shelter.com</h4>
-          </div>
-          <div class="footer-inner-container">
-            <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
-            <h4 class="footer-info">+13 674 567 75 54</h4>
-          </div>
+          <a class="email-link" href="https://www.gmail.com" target="_blank">
+            <div class="footer-inner-container">
+              <img class="footer-icon" src="imgs/icon-email.svg" alt="icon-email">
+              <h4 class="footer-info">email@shelter.com</h4>
+            </div>
+          </a>
+          <a class="phone-link" href="https://www.apple.com/" target="_blank">
+            <div class="footer-inner-container">
+              <img class="footer-icon" src="imgs/icon-phone.svg" alt="icon-phone">
+              <h4 class="footer-info">+13 674 567 75 54</h4>
+            </div>
+          </a>
         </div>
         <div class="footer-location">
           <h3 class="footer-heading">We are waiting for your visit</h3>
-          <div class="footer-inner-container">
-            <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-            <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
-          </div>
-          <div class="footer-inner-container">
-            <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
-            <h4 class="footer-location-info">18 South Park, London </h4>
-          </div>
+          <a class="location-link" href="https://www.google.com/maps" target="_blank">
+            <div class="footer-inner-container">
+              <img class="footer-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+              <h4 class="footer-location-info">1 Central Street, Boston (entrance from the store)</h4>
+            </div>
+          </a>
+          <a class="location-link" href="https://www.google.com/maps" target="_blank">
+            <div class="footer-inner-container">
+              <img class="footer-loc-icon" src="imgs/icon-marker.svg" alt="icon-marker">
+              <h4 class="footer-location-info">18 South Park, London </h4>
+            </div>
+          </a>
         </div>
         <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
       </div>
