--- a/shelter/main.html
+++ b/shelter/main.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=1280px, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="imgs/footer-puppy.png">
+  <script src="index.js"></script>
   <title>Shelter</title>
 </head>
 <body>
