--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=1280px, initial-scale=1.0">
   <link rel="stylesheet" href="style-our-pets.css">
   <link rel="icon" href="imgs/footer-puppy.png">
+  <script src="index.js"></script>
   <title>Shelter</title>
 </head>
 <body>
