--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1280px, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style-our-pets.css">
   <link rel="icon" href="imgs/footer-puppy.png">
   <script src="index.js"></script>
