fix: our-pets main 768px fixed

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -46,27 +46,27 @@
               <p class="card-text">Woody</p>
               <button class="card-button">Learn more</button>
             </div>
-            <div class="card">
+            <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-sophia.png" alt="sophia">
               <p class="card-text">Sophia</p>
               <button class="card-button">Learn more</button>
             </div>
-            <div class="card">
+            <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-timmy.png" alt="timmy">
               <p class="card-text">Timmy</p>
               <button class="card-button">Learn more</button>
             </div>
-            <div class="card">
+            <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-charly.png" alt="charly">
               <p class="card-text">Charly</p>
               <button class="card-button">Learn more</button>
             </div>
-            <div class="card">
+            <div class="card hidden-768">
               <img class="card-image" src="imgs/pets-scarlet.png" alt="scarlet">
               <p class="card-text">Scarlett</p>
               <button class="card-button">Learn more</button>
             </div>
-            <div class="card">
+            <div class="card hidden-768">
               <img class="card-image" src="imgs/pets-freddie.png" alt="freddie">
               <p class="card-text">Freddie</p>
               <button class="card-button">Learn more</button>
@@ -84,7 +84,7 @@
     </div>
   </main>
   <footer class="footer" id="footer">
-    <div class="wrap">
+    <div class="footer-wrap">
       <div class="footer-container">
         <div class="footer-contacts">
           <h3 class="footer-heading">For questions and suggestions</h3>
@@ -116,8 +116,8 @@
             </div>
           </a>
         </div>
-        <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
       </div>
+      <img class="footer-puppy" src="imgs/footer-puppy.png" alt="footer-puppy">
     </div>
   </footer>
 </body>
