feat: our-pets almost done, 320px hamburger menu left only

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -17,7 +17,7 @@
           <p class="header-subtitle">Shelter for pets in Boston</p>
         </a>
       </div>
-      <nav class="header-links">
+      <nav class="header-links hidden-320">
         <a class="header-link" href="main.html">About the shelter</a>
         <a class="header-link" id="active-link">Our pets</a>
         <a class="header-link" href="main.html#help">Help the shelter</a>
