feat: our-pets ready

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -23,6 +23,9 @@
         <a class="header-link" href="main.html#help">Help the shelter</a>
         <a class="header-link" href="#footer">Contacts</a>
       </nav>
+      <button class="header-hamburger-button">
+        <img class="header-hamburger-img" src="imgs/Burger.svg" alt="hamburger-icon">
+      </button>
     </div>
   </header>
   <main class="main">
