fix: main 1280px

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -12,17 +12,20 @@
   <header class="header">
     <div class="header-wrap">
       <div class="header-title">
-        <a href="#" class="header-main-title-link">
+        <a href="main.html" class="header-main-title-link">
           <p class="header-main-title">Cozy House</p>
           <p class="header-subtitle">Shelter for pets in Boston</p>
         </a>
       </div>
-      <nav class="header-links">
+      <nav class="header-links hidden-320">
         <a class="header-link" id="active-link">About the shelter</a>
         <a class="header-link" href="our-pets.html">Our pets</a>
-        <a class="header-link" href="#help">Help the shelter</a>
+        <a class="header-link" href="main.html#help">Help the shelter</a>
         <a class="header-link" href="#footer">Contacts</a>
       </nav>
+      <button class="header-hamburger-button">
+        <img class="header-hamburger-img" src="imgs/Burger-light.svg" alt="hamburger-icon">
+      </button>
     </div>
   </header>
   <main>
@@ -57,7 +60,7 @@
     <section class="pets" id="pets">
       <div class="wrap">
         <div class="pets-content">
-          <h3 class="pets-header">Our friends who <br/>are looking for a house</h3>
+          <h3 class="pets-header">Our friends who <br>are looking for a house</h3>
           <div class="pets-slider">
             <button class="pets-slider-left-button">
               <img class="pets-slider-left" src="imgs/Arrow-l.svg" alt="">
