feat: not-only 768px and some other sections changes

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1280px, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="imgs/footer-puppy.png">
   <script src="index.js"></script>
@@ -71,12 +71,12 @@
                 <p class="card-text">Katrine</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-320">
                 <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
                 <p class="card-text">Jennifer</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-768">
                 <img class="card-image" src="imgs/pets-woody.png" alt="woody">
                 <p class="card-text">Woody</p>
                 <button class="card-button">Learn more</button>
