feat: burger interaction on both pages

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="imgs/footer-puppy.png">
-  <script src="index.js"></script>
   <title>Shelter</title>
 </head>
 <body>
@@ -17,14 +16,19 @@
           <p class="header-subtitle">Shelter for pets in Boston</p>
         </a>
       </div>
-      <nav class="header-links hidden-320">
+      <div class='blur'></div>
+      <nav class="header-links">
         <a class="header-link" id="active-link">About the shelter</a>
         <a class="header-link" href="our-pets.html">Our pets</a>
         <a class="header-link" href="main.html#help">Help the shelter</a>
         <a class="header-link" href="#footer">Contacts</a>
       </nav>
       <button class="header-hamburger-button">
-        <img class="header-hamburger-img" src="imgs/Burger-light.svg" alt="hamburger-icon">
+        <div class="hamburger-icon">
+          <div class="hamburger-line"></div>
+          <div class="hamburger-line"></div>
+          <div class="hamburger-line"></div>
+        </div>
       </button>
     </div>
   </header>
@@ -37,7 +41,7 @@
             <p class='not-only-subtitle p-l'>We offer to give a chance to a little and nice puppy with 
               an extremely wide and open heart. He or she will love you more 
               than anybody else in the world, you will see!</p>
-              <form action="#pets" class="header-link">
+              <form action="#pets" class="header-link-form">
                 <button class='not-only-button'>Make a friend</button>
               </form>
           </div>
@@ -191,5 +195,6 @@
       </div>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
