feat: pagination added for our-pets page

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -72,17 +72,47 @@
             <div class="pets-card-container">
               <div class="card">
                 <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine</p>
+                <p class="card-text">Katrine1</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card hidden-320">
-                <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
-                <p class="card-text">Jennifer</p>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine2</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card hidden-768">
-                <img class="card-image" src="imgs/pets-woody.png" alt="woody">
-                <p class="card-text">Woody</p>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine3</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine4</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine5</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine6</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine7</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine8</p>
+                <button class="card-button">Learn more</button>
+              </div>
+              <div class="card">
+                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
+                <p class="card-text">Katrine9</p>
                 <button class="card-button">Learn more</button>
               </div>
             </div>
@@ -157,6 +187,25 @@
         </div>
       </div>
     </section>
+    <div class="popup">
+      <div class="popup-card">
+        <img src="imgs/pets-jennifer.png" alt="pet-image" class="popup-img">
+        <div class="popup-content">
+          <h3 class="popup-title">Jennifer</h3>
+          <h4 class="popup-subtitle">Dog - Labrador</h4>
+          <h5 class="popup-description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</h5>
+          <ul class="popup-stats">
+            <li class="popup-stat"><b>Age:</b> 2 months</li>
+            <li class="popup-stat"><b>Inoculations:</b> none</li>
+            <li class="popup-stat"><b>Diseases:</b> none</li>
+            <li class="popup-stat"><b>Parasites:</b> none</li>
+          </ul>
+        </div>
+      </div>
+      <button class="popup-button">
+        <img class="popup-button-cross" src="imgs/cross.svg" alt="close">
+      </button>
+    </div>
   </main>
   <footer class="footer" id="footer">
     <div class="wrap">
