--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -40,51 +40,51 @@
           <div class="card-container">
             <div class="card">
               <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-              <p class="card-text">Katrine</p>
+              <p class="card-text">Katrine123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card">
               <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
-              <p class="card-text">Jennifer</p>
+              <p class="card-text">Jennifer123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card">
               <img class="card-image" src="imgs/pets-woody.png" alt="woody">
-              <p class="card-text">Woody</p>
+              <p class="card-text">Woody123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-sophia.png" alt="sophia">
-              <p class="card-text">Sophia</p>
+              <p class="card-text">Sophia123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-timmy.png" alt="timmy">
-              <p class="card-text">Timmy</p>
+              <p class="card-text">Timmy123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card hidden-320">
               <img class="card-image" src="imgs/pets-charly.png" alt="charly">
-              <p class="card-text">Charly</p>
+              <p class="card-text">Charly123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card hidden-768">
               <img class="card-image" src="imgs/pets-scarlet.png" alt="scarlet">
-              <p class="card-text">Scarlett</p>
+              <p class="card-text">Scarlett123</p>
               <button class="card-button">Learn more</button>
             </div>
             <div class="card hidden-768">
               <img class="card-image" src="imgs/pets-freddie.png" alt="freddie">
-              <p class="card-text">Freddie</p>
+              <p class="card-text">Freddie123</p>
               <button class="card-button">Learn more</button>
             </div>
           </div>
           <div class="pagination-container">
-            <button class="pagination-button" id="disabled-button-last">&lt;&lt;</button>
+            <button class="pagination-button" id="disabled-button">&lt;&lt;</button>
             <button class="pagination-button" id="disabled-button">&lt;</button>
             <button class="pagination-button" id="main-button">1</button>
             <button class="pagination-button" id="active-button">&gt;</button>
-            <button class="pagination-button" id="active-button-last">&gt;&gt;</button>
+            <button class="pagination-button" id="active-button">&gt;&gt;</button>
           </div>
         </div>
       </div>
@@ -127,6 +127,6 @@
       </div>
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script src="our-pets.js"></script>
 </body>
 </html>
