feat: PopUp window for our-pets

--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -89,6 +89,25 @@
         </div>
       </div>
     </div>
+    <div class="popup">
+      <div class="popup-card">
+        <img src="imgs/pets-jennifer.png" alt="pet-image" class="popup-img">
+        <div class="popup-content">
+          <h3 class="popup-title">Jennifer</h3>
+          <h4 class="popup-subtitle">Dog - Labrador</h4>
+          <h5 class="popup-description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</h5>
+          <ul class="popup-stats">
+            <li class="popup-stat-1"><b>Age:</b> 2 months</li>
+            <li class="popup-stat-2"><b>Inoculations:</b> none</li>
+            <li class="popup-stat-3"><b>Diseases:</b> none</li>
+            <li class="popup-stat-4"><b>Parasites:</b> none</li>
+          </ul>
+        </div>
+      </div>
+      <button class="popup-button">
+        <img class="popup-button-cross" src="imgs/cross.svg" alt="close">
+      </button>
+    </div>
   </main>
   <footer class="footer" id="footer">
     <div class="footer-wrap">
