feat: added loading, start working on slider

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -67,57 +67,42 @@
           <h3 class="pets-header">Our friends who <br>are looking for a house</h3>
           <div class="pets-slider">
             <button class="pets-slider-left-button">
-              <img class="pets-slider-left" src="imgs/Arrow-l.svg" alt="">
+              <img class="pets-slider-left" src="imgs/Arrow-l.svg" alt="left-arrow">
             </button>
             <div class="pets-card-container">
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine1</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine2</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine3</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine4</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine5</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
               <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine6</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine7</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine8</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card">
-                <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-                <p class="card-text">Katrine9</p>
+                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
             </div>
             <button class="pets-slider-right-button">
-              <img class="pets-slider-right" src="imgs/Arrow-r.svg" alt="">
+              <img class="pets-slider-right" src="imgs/Arrow-r.svg" alt="right-arrow">
             </button>
           </div>
           <form action="our-pets.html" class="pets-main-button-link">
@@ -195,10 +180,10 @@
           <h4 class="popup-subtitle">Dog - Labrador</h4>
           <h5 class="popup-description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to find a new forever home. This girl really enjoys being able to go outside to run and play, but won't hesitate to play up a storm in the house if she has all of her favorite toys.</h5>
           <ul class="popup-stats">
-            <li class="popup-stat"><b>Age:</b> 2 months</li>
-            <li class="popup-stat"><b>Inoculations:</b> none</li>
-            <li class="popup-stat"><b>Diseases:</b> none</li>
-            <li class="popup-stat"><b>Parasites:</b> none</li>
+            <li class="popup-stat-1"><b>Age:</b> 2 months</li>
+            <li class="popup-stat-2"><b>Inoculations:</b> none</li>
+            <li class="popup-stat-3"><b>Diseases:</b> none</li>
+            <li class="popup-stat-4"><b>Parasites:</b> none</li>
           </ul>
         </div>
       </div>
