--- a/shelter/our-pets.html
+++ b/shelter/our-pets.html
@@ -39,44 +39,44 @@
         <div class="main-container">
           <div class="card-container">
             <div class="card">
-              <img class="card-image" src="imgs/pets-katrine.png" alt="katrine">
-              <p class="card-text">Katrine123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card">
-              <img class="card-image" src="imgs/pets-jennifer.png" alt="jennifer">
-              <p class="card-text">Jennifer123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card">
-              <img class="card-image" src="imgs/pets-woody.png" alt="woody">
-              <p class="card-text">Woody123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card hidden-320">
-              <img class="card-image" src="imgs/pets-sophia.png" alt="sophia">
-              <p class="card-text">Sophia123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card hidden-320">
-              <img class="card-image" src="imgs/pets-timmy.png" alt="timmy">
-              <p class="card-text">Timmy123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card hidden-320">
-              <img class="card-image" src="imgs/pets-charly.png" alt="charly">
-              <p class="card-text">Charly123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card hidden-768">
-              <img class="card-image" src="imgs/pets-scarlet.png" alt="scarlet">
-              <p class="card-text">Scarlett123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
             <div class="card hidden-768">
-              <img class="card-image" src="imgs/pets-freddie.png" alt="freddie">
-              <p class="card-text">Freddie123</p>
-              <button class="card-button">Learn more</button>
+              <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+              <p class="card-text">Loading...</p>
+              <button class="card-button">Learn more</button>  
             </div>
           </div>
           <div class="pagination-container">
