feat: added slider, no animation yet

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -75,27 +75,27 @@
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-320">
                 <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-768">
                 <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hide">
                 <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-320 hide">
                 <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
               </div>
-              <div class="card">
+              <div class="card hidden-768 hide">
                 <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
                 <p class="card-text">Loading...</p>
                 <button class="card-button">Learn more</button>
