fix: slider animation, final commit before deploy

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -70,35 +70,56 @@
               <img class="pets-slider-left" src="imgs/Arrow-l.svg" alt="left-arrow">
             </button>
             <div class="pets-card-container">
-              <div class="card">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
+              <div class="pets-card-inner-container">
+                <div class="card">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-320">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-768">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
               </div>
-              <div class="card hidden-320">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
+              <div class="pets-card-inner-container">
+                <div class="card">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-320">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-768">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
               </div>
-              <div class="card hidden-768">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card hide">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card hidden-320 hide">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
-              </div>
-              <div class="card hidden-768 hide">
-                <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
-                <p class="card-text">Loading...</p>
-                <button class="card-button">Learn more</button>
+              <div class="pets-card-inner-container">
+                <div class="card">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-320">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
+                <div class="card hidden-768">
+                  <img class="card-image" src="imgs/empty-card.png" alt="pet-image">
+                  <p class="card-text">Loading...</p>
+                  <button class="card-button">Learn more</button>
+                </div>
               </div>
             </div>
             <button class="pets-slider-right-button">
